tests/base/parser/bad/lib/lmodule-library-cid-type-cid-eq-bar-with.scillib
scilla_version 0

library TestLib

(* 'kind' should start with a capital *)

type House =
| kind of String
